--- a/index.html
+++ b/index.html
@@ -562,9 +562,9 @@
             <p class="form-help-message help-message"></p>
           <!-- </div> -->
           <button class="btn btn-small " type="submit">Sent now</button>
-          <!-- <div class="field">
+          <div class="field">
             <div data-netlify-recaptcha="true"></div>
-          </div> -->
+          </div>
         </form>
     </div>
   </section>
