--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
         <div class="map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2434.5259608709016!2d16.96071031594986!3d52.39714325307903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47045b097322144b%3A0xc29cbe1ebff9e744!2sKatowicka%2053c!5e0!3m2!1spl!2spl!4v1578926325268!5m2!1spl!2spl" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
-        <form class="contact-form" id="contact-form" method="POST" data-netlify="true" >
+        <form class="contact-form" id="contact-form" method="POST" data-netlify="true" netlify-honeypot="bot-field">
           <!-- <div class="wrapper"> -->
             <input type="text" class="input name" placeholder="Name" name='name' id="name" required>
             <p class="form-help-message help-name"></p>
@@ -565,6 +565,11 @@
           <div class="field">
             <div data-netlify-recaptcha="true"></div>
           </div>
+          <p class="hidden">
+            <label>
+              Don’t fill this out if you’re human: <input name="bot-field" />
+            </label>
+          </p>
         </form>
     </div>
   </section>
