--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
           </div>
           <p class="hidden">
             <label>
-              Don’t fill this out if you’re human: <input name="bot-field" />
+              <input name="bot-field" />
             </label>
           </p>
           <button class="btn btn-small " type="submit">Sent now</button>
