--- a/index.html
+++ b/index.html
@@ -564,11 +564,7 @@
           <div class="field">
             <div data-netlify-recaptcha="true"></div>
           </div>
-          <p class="hidden">
-            <label>
-              <input name="bot-field" />
-            </label>
-          </p>
+          <div data-netlify-recaptcha="true"></div>
           <button class="btn btn-small " type="submit">Sent now</button>
         </form>
     </div>
