--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
           <div class="field">
             <div data-netlify-recaptcha="true"></div>
           </div>
-          <div data-netlify-recaptcha="true"></div>
+          <div data-netlify-recaptcha="true" style="margin-top:-30px"></div>
           <button class="btn btn-small " type="submit">Sent now</button>
         </form>
     </div>
