--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         </div>
         <form class="contact-form" id="contact-form" method="POST" data-netlify="true" netlify-honeypot="bot-field">
           <p hidden="">
-            <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+            <label>Don’t fill this out if you're human: <input name="bot-field" required /></label>
           </p>
           <div class="wrapper">
             <input type="text" class="input name" placeholder="Name" name='name' id="name" required>
