--- a/index.html
+++ b/index.html
@@ -569,6 +569,7 @@
           </div>
           <div data-netlify-recaptcha="true" style="margin-top:-30px"></div>
           <button class="btn btn-small " type="submit">Sent now</button>
+          <p class="recaptcha">Please fill reCaptcha</p>
         </form>
     </div>
   </section>
@@ -592,7 +593,6 @@
   <script src="https://cdn.jsdelivr.net/gh/cferdinandi/gumshoe/dist/gumshoe.polyfills.min.js"></script>
   <script src="./js/swiper.min.js"></script>
   <script src="./js/script.js" type="module"></script>
-  <!-- <script src="./js/additional.js" type="module"></script> -->
 </body>
 
 </html>
