--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </li>
           </ul>
           <div class="language">
-            <span class="lang-change active" data-lang="pl">PL</span>
+            <span class="lang-change active" data-lang="pl">PL</span>/
             <span class="lang-change" data-lang="en">EN</span>
           </div>
           <div class="nav-button">
