--- a/index.html
+++ b/index.html
@@ -150,38 +150,58 @@
         <h4 class="row-subtitle" data-i18n="skills.subtitle">Technologies and tools that I use on a daily basis</h4>
       </div>
       <div class="new-container">
-        <div class="icons-container">
-          <div class="skills-single-icon icon-1" data-icon="html">
-            <img src="./img/skills-icons/html.png" alt="html icon">
-          </div>
-          <div class="skills-single-icon" data-icon="css">
-            <img src="./img/skills-icons/css.png" alt="css icon">
-          </div>
-          <div class="skills-single-icon" data-icon="js">
-            <img src="./img/skills-icons/javascript.png" alt="js icon">
-          </div>
-          <div class="skills-single-icon angular" data-icon="angular">
-            <img src="./img/skills-icons/angular.png" alt="angular icon">
-          </div>
-          <div class="skills-single-icon" data-icon="bootstrap">
-            <img src="./img/skills-icons/bootstrap.png" alt="bootstrap icon">
-          </div>
-          <div class="skills-single-icon" data-icon="sass">
-            <img src="./img/skills-icons/sass.png" alt="sass icon">
-          </div>
-          <div class="skills-single-icon" data-icon="git">
-            <img src="./img/skills-icons/git.png" alt="git icon">
-          </div>
-          <div class="skills-single-icon" data-icon="rwd">
-            <img src="./img/skills-icons/rwd.png" alt="rwd icon">
-          </div>
-        </div>
+        <p class="skills-text" data-i18n="skills.text">
+          Jako wykwalifikowany programista stron internetowych, specjalizuję się w użyciu technologii, takich jak 
+          HTML, CSS, TypeScript i Angular, aby tworzyć dynamiczne i responsywne aplikacje webowe. W projektowaniu 
+          interfejsów użytkownika stosuję Materials UI oraz Bootstrap, co zapewnia zarówno efektywność, jak i 
+          estetyczny wygląd. W mojej codziennej pracy kluczowe są Docker i REST API, które umożliwiają skuteczną i 
+          niezawodną komunikację z serwerami. Do zarządzania projektami i pracy zespołowej nieodzowne są narzędzia 
+          takie jak Git i Jira, które pozwalają na sprawną organizację i koordynację działań.
+        </p>
         <div class="progress-container">
-          <h2 class="technology">HTML</h2>
-          <h5 class="description">I use tags in accordance with W3C semantics and standards.</h5>
+          <h5 class="technology">HTML / CSS</h5>
           <div class="progress-bar">
-            <div class="content">
-              <p class="procent">80%</p>
+            <div class="content" style="width: 95%;">
+            </div>
+          </div>
+          <h5 class="technology">JavaScript / TypeScript</h5>
+          <div class="progress-bar">
+            <div class="content" style="width: 85%;">
+            </div>
+          </div>
+          <h5 class="technology">Angular / RxJS</h5>
+          <div class="progress-bar">
+            <div class="content" style="width: 85%;">
+            </div>
+          </div>
+          <h5 class="technology">Materials UI / Bootstrap</h5>
+          <div class="progress-bar">
+            <div class="content" style="width: 85%;">
+            </div>
+          </div>
+          <h5 class="technology">Docker</h5>
+          <div class="progress-bar">
+            <div class="content" style="width: 70%;">
+            </div>
+          </div>
+          <h5 class="technology">Rest API</h5>
+          <div class="progress-bar">
+            <div class="content" style="width: 70%;">
+            </div>
+          </div>
+          <h5 class="technology">Git / Github / Stash</h5>
+          <div class="progress-bar">
+            <div class="content" style="width: 80%;">
+            </div>
+          </div>
+          <h5 class="technology">Jira / Coufluence</h5>
+          <div class="progress-bar">
+            <div class="content" style="width: 80%;">
+            </div>
+          </div>
+          <h5 class="technology">Figma</h5>
+          <div class="progress-bar">
+            <div class="content" style="width: 70%;">
             </div>
           </div>
         </div>
