--- a/index.html
+++ b/index.html
@@ -87,12 +87,7 @@
           </div>
           <div class="about-info">
             <h2 class="title-text">Krzysztof Siek</h2>
-            <h3 class="info" data-i18n="about.info">My name is Krzysztof and i live in Poznań. I'm a Freelancer / Front-end
-              Developer.
-              I create modern websites using Html, Css, Js and many frameworks. My pages are always
-              crafted with attention to finer details and care of semantics. As a perfectionist I attach
-              grate importance to the quality of the code. I constantly strive to develop and improve my
-              skills to make my projects even better and better.
+            <h3 class="info" data-i18n="about.info">My name is Krzysztof, and I live in Poznań. As a front-end developer with over 4 years of experience, I specialize in creating modern web applications using the Angular framework. My projects combine aesthetics, functionality, and intuitiveness, always created with attention to the smallest details and semantics. As a perfectionist, I attach great importance to the quality of the code. I constantly strive to develop and improve my skills, which allows me to work effectively in teams and adapt to the changing requirements of projects, making my work better and better.
             </h3>
             <h4 class="info" data-i18n="about.info2">Determined, reliable, working with full commitment </h4>
             <h5 class="info-yellow" data-i18n="about.cooperation">If you are interested in cooperation, please contact me!</h5>
@@ -151,12 +146,12 @@
       </div>
       <div class="new-container">
         <p class="skills-text" data-i18n="skills.text">
-          Jako wykwalifikowany programista stron internetowych, specjalizuję się w użyciu technologii, takich jak 
-          HTML, CSS, TypeScript i Angular, aby tworzyć dynamiczne i responsywne aplikacje webowe. W projektowaniu 
-          interfejsów użytkownika stosuję Materials UI oraz Bootstrap, co zapewnia zarówno efektywność, jak i 
-          estetyczny wygląd. W mojej codziennej pracy kluczowe są Docker i REST API, które umożliwiają skuteczną i 
-          niezawodną komunikację z serwerami. Do zarządzania projektami i pracy zespołowej nieodzowne są narzędzia 
-          takie jak Git i Jira, które pozwalają na sprawną organizację i koordynację działań.
+          As a skilled web developer, I specialize in using technologies such as HTML, CSS, TypeScript, 
+          and Angular to create dynamic and responsive web applications. In designing user interfaces, 
+          I apply Materials UI and Bootstrap, ensuring both efficiency and aesthetic appeal. 
+          Docker and REST API are crucial in my daily work, enabling effective and reliable communication 
+          with servers. Tools like Git and Jira are indispensable for project management and team collaboration, 
+          allowing for smooth organization and coordination.
         </p>
         <div class="progress-container">
           <h5 class="technology">HTML / CSS</h5>
